# HemePure

./: .gitignore  AUTHORS  FullBuild.sh  LICENSE  README.md
cases/: SpongeLayerNotes.md  WindkesselNotes.md  YangPressureNotes.md
cases/Benchmarking/: BenchmarkingReadMe.txt
cases/Benchmarking/CircleOfWillis/coW-15um/: Flow_BA_100.txt.weights.txt  Flow_LICA_100.txt.weights.txt  Flow_RICA_100.txt  Flow_RICA_100.txt.weights.txt  inputPP.xml  inputVP.xml
cases/Benchmarking/CircleOfWillis/coW-25um/: Flow_BA_100.txt.weights.txt  Flow_LICA_100.txt.weights.txt  inputPP.xml  (+2 more)
cases/Benchmarking/ExaPipe/: inputExaPipe.xml
cases/FiveExit/: SixBranch.gmy  SixBranch.stl  input.xml  input_VfWK.xml  postProcessFlowRates.py  postProcessPlotSingleFunction.py  runJob.sh  toParaview.sh
cases/UnevenArms/: input.xml  postProcessFlowRates.py  postProcessPlotSingleFunction.py  runJob.sh
cases/UnevenArmsFile/: OUTLET0_WK.txt.weights.txt  OUTLET1_WK.txt.weights.txt  UnevenArms.gmy  UnevenArms.stl  hemeXtract  input.xml  input_nonFile.xml  runJob.sh  toParaview.sh
cases/bifurcation/: bifurcation.stl
cases/bifurcation/bifurcation_hires/: ArteryTriangleSet.stl  bifurcation.xml  input.xml
cases/bifurcation/bifurcation_lores/: ArteryTriangleSet.stl  bifurcation.xml  input.xml
cases/checkpointingExample/: CheckpointingNotes.txt  bifurcation.gmy  input-restart.xml  input.xml  runFirst.sh  runRestart.sh
cases/colloidsExample/: ColloidsNotes.txt  bifurcation.gmy+  inputColloid.xml
cases/elasticWallsExample/: ElasticWallsNotes.txt  inputAdvanced.xml  inputSimple.xml  pipe.gmy
cases/pipe/: input_DataOutput.xml
dep/: CMakeLists.txt
dep/modules/: FindCPPUNIT.cmake  FindCTEMPLATE.cmake  FindPARMETIS.cmake  FindPTSCOTCH.cmake  FindTINYXML.cmake  FindTIRPC.cmake  FindZOLTAN.cmake
dep/patches/: ctemplate_python3.diff
dep/stuff/: Makefile.inc  parmetis_dgraph_part.c
src/: CMakeLists.txt  SimulationMaster.cc  SimulationMaster.h  constants.h  main.cc  units.h
src/cmake/: dependencies.cmake  mpi.cmake  platform_checks.cmake
src/colloids/: BodyForceGravitic.h  BodyForceMagnetic.h  BodyForces.cc  BodyForces.h  BoundaryConditionDeletion.h  BoundaryConditionLubrication.h  BoundaryConditionSpherical.h  BoundaryConditions.cc  BoundaryConditions.h  CMakeLists.txt  ColloidController.cc  ColloidController.h  Particle.cc  Particle.h  ParticleMpiDatatypes.cc  ParticleSet.cc  ParticleSet.h  PersistedParticle.cc  PersistedParticle.h
src/configuration/: CMakeLists.txt  CommandLine.cc  CommandLine.h  SimConfig.cc  SimConfig.h
src/extraction/: ArbitrarySiteListIterableDataSource.h  CMakeLists.txt  GeometrySelectors.h  InletSelector.cc  InletSelector.h  IterableDataSource.h  LbDataSourceIterator.cc  LbDataSourceIterator.h  LocalDistributionInput.cc  LocalPropertyOutput.cc  LocalPropertyOutput.h  OutletSelector.cc  OutletSelector.h  OutputField.h  PropertyActor.cc  PropertyOutputFile.h  SphereGeometrySelector.cc  SphereGeometrySelector.h  SurfaceWithinSphereSelector.cc  SurfaceWithinSphereSelector.h
src/geometry/: CMakeLists.txt  Geometry.h  GeometryReader.cc  GeometryReader.h  LatticeData.cc  LatticeData.h  ParmetisHeader.h  Site.h  SiteDataBare.h
src/geometry/decomposition/: BasicDecomposition.cc  BasicDecomposition.h  DecompositionWeights.h.in  OptimisedDecomposition.cc  OptimisedDecomposition.h
src/geometry/needs/: Needs.cc  Needs.h
src/geometry/neighbouring/: NeighbouringDataManager.cc  RequiredSiteInformation.h
src/io/: CMakeLists.txt
src/io/formats/: colloids.h  geometry.h
src/io/writers/xdr/: XdrFileReader.cc  XdrFileReader.h  XdrReader.cc  XdrReader.h
src/io/xml/: XmlAbstractionLayer.cc  XmlAbstractionLayer.h
src/lb/: BuildSystemInterface.h  CMakeLists.txt  LbmParameters.h  MacroscopicPropertyCache.cc  MacroscopicPropertyCache.h  SimulationState.h  lb.h  lb.hpp
src/lb/iolets/: BoundaryComms.cc  BoundaryComms.h  BoundaryCommunicator.cc  BoundaryCommunicator.h  BoundaryValues.cc  BoundaryValues.h  InOutLet.cc  InOutLet.h  InOutLetCosine.h  InOutLetFile.cc  InOutLetFileVelocity.cc  InOutLetFileWK.cc  InOutLetFileWK.h  InOutLetParabolicVelocity.cc  InOutLetReadWriteVelocity.cc  InOutLetReadWriteVelocity.h  InOutLetVelocity.cc  InOutLetWK.cc  InOutLetWK.h  InOutLetWK2.cc  InOutLetWK2.h  InOutLetWK3.cc  InOutLetWK3.h  InOutLetWomersleyElasticVelocity.cc  InOutLetWomersleyElasticVelocity.h  InOutLets.h
src/lb/kernels/: BaseKernel.h  Kernels.h  LBGK.h  LBGKGuoForcing.h  LBGKLESSpongeLayer.h  LBGKSpongeLayer.h  MRT.h  TRT.h  TRTSpongeLayer.h
src/lb/kernels/momentBasis/: DHumieresD3Q15MRTBasis.cc  DHumieresD3Q15MRTBasis.h  DHumieresD3Q19MRTBasis.cc  DHumieresD3Q19MRTBasis.h
src/lb/lattices/: D3Q19.cc  Lattice.h
src/lb/streamers/: BaseStreamer.h  GrinbergKarniadakisWKDelegate.h  GrinbergKarniadakisWKIolet.h  GuoZhengShi.h  GuoZhengShiDelegate.h  GuoZhengShiElasticWallDelegate.h  LaddIolet.h  LaddIoletDelegate.h  NashZerothOrderPressureDelegate.h  NashZerothOrderPressureIolet.h  SimpleCollideAndStream.h  SimpleCollideAndStream.h.orig  StreamerTypeFactory.h  Streamers.h  VirtualSiteIolet.h  YangPressureDelegate.h  YangPressureIolet.h
src/log/: Logger.cc
src/net/: CMakeLists.txt  MpiCommunicator.cc  MpiCommunicator.h  MpiCommunicator.hpp  MpiDataType.h  MpiEnvironment.cc  MpiEnvironment.h  PhasedBroadcast.h
src/net/mixins/: InterfaceDelegationNet.h
src/reporting/: BuildInfo.h.in  CMakeLists.txt  Timers.h
src/resources/: CMakeLists.txt  Resource.h  report.txt.ctp  report.xml.ctp
src/unittests/: SimulationMasterTests.h  main.cc
src/unittests/configuration/: CommandLineTests.h
src/unittests/geometry/: NeedsTests.h
src/unittests/io/: PathManagerTests.h
src/unittests/lbtests/: StreamerTests.h  VirtualSiteIoletStreamerTests.h
src/unittests/reporting/: ReporterTests.h
src/unittests/resources/: config-velocity-iolet.xml  config.xml  config0_2_0.xml  config_file_inlet.xml  config_file_velocity_inlet.xml  config_new_velocity_inlets.xml  four_cube.xml
src/util/: Bessel.cc  Bessel.h  CMakeLists.txt  UnitConverter.cc  UnitConverter.h  Vector3D.h  fileutils.cc
(+9 files in other folders)
